refProcessor