@@ -21,38 +21,52 @@
 # jdk/internal/reflect/CallerSensitive/CheckCSMs
 # jdk/java/math/BigInteger/largeMemory/SymmetricRangeTests
 
+# sh exec_test.sh runtime/ErrorHandling/TestHeapDumpPath
+#  assert(Universe::is_in_heap(result)) failed: object not in heap 0x00000007fffffff8
 
-pushd /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_math_BigInteger_largeMemory_SymmetricRangeTests_java/scratch/0 && \
+# sh exec_test.sh runtime/HiddenClasses/GCHiddenClass
+#  assert(UseG1GC) failed: Only possible with a concurrent marking collector
+
+# sh exec_test.sh runtime/modules/ClassLoaderNoUnnamedModuleTest
+#  guarantee(java_lang_Module::is_instance(module)) failed: The unnamed module for ClassLoader ClassLoaderNoUnnamedModule$TestClass, is null or not an instance of java.lang.Module. The class loader has not been initialized correctly.
+
+# sh exec_test.sh runtime/logging/RedefineClasses
+#  assert(Universe::is_in_heap(result)) failed: object not in heap 0x00000007fffffff8
+
+# sh exec_test.sh gc/TestSoftReferencesBehaviorOnOOME
+#  assert(Universe::is_in_heap(result)) failed: object not in heap 0x00000007f8000000
+
+pushd /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_TestSoftReferencesBehaviorOnOOME_java/scratch/0 && \
 HOME=/Users/zeedh \
 JDK8_HOME=/Library/Java/JavaVirtualMachines/adoptopenjdk-16.jdk/Contents/Home \
 LANG=en_US.UTF-8 \
 LC_ALL=C \
 PATH=/bin:/usr/bin:/usr/sbin \
 TEST_IMAGE_DIR=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test \
-CLASSPATH=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_math_BigInteger_largeMemory_SymmetricRangeTests_java/classes/0/java/math/BigInteger/largeMemory/SymmetricRangeTests.d:/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/math/BigInteger/largeMemory:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_math_BigInteger_largeMemory_SymmetricRangeTests_java/classes/0/test/lib:/Users/zeedh/slowcoders/jdk-rtgc/test/lib:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/javatest.jar:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/jtreg.jar \
+CLASSPATH=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_TestSoftReferencesBehaviorOnOOME_java/classes/0/gc/TestSoftReferencesBehaviorOnOOME.d:/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/gc:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_TestSoftReferencesBehaviorOnOOME_java/classes/0/test/lib:/Users/zeedh/slowcoders/jdk-rtgc/test/lib:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/javatest.jar:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/jtreg.jar \
     /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk/bin/java \
-        -Dtest.vm.opts='-Xmx768m -XX:MaxRAMPercentage=6.25 -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_math_BigInteger_largeMemory_SymmetricRangeTests_java/tmp -ea -esa' \
-        -Dtest.tool.vm.opts='-J-Xmx768m -J-XX:MaxRAMPercentage=6.25 -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_math_BigInteger_largeMemory_SymmetricRangeTests_java/tmp -J-ea -J-esa' \
+       -XX:+UnlockExperimentalVMOptions \
+        -Dtest.vm.opts='-XX:MaxRAMPercentage=6.25 -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_TestSoftReferencesBehaviorOnOOME_java/tmp' \
+        -Dtest.tool.vm.opts='-J-XX:MaxRAMPercentage=6.25 -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_TestSoftReferencesBehaviorOnOOME_java/tmp' \
         -Dtest.compiler.opts= \
         -Dtest.java.opts= \
         -Dtest.jdk=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk \
         -Dcompile.jdk=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk \
         -Dtest.timeout.factor=4.0 \
-        -Dtest.nativepath=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/jdk/jtreg/native \
-        -Dtest.root=/Users/zeedh/slowcoders/jdk-rtgc/test/jdk \
-        -Dtest.name=java/math/BigInteger/largeMemory/SymmetricRangeTests.java \
-        -Dtest.file=/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/math/BigInteger/largeMemory/SymmetricRangeTests.java \
-        -Dtest.src=/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/math/BigInteger/largeMemory \
-        -Dtest.src.path=/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/math/BigInteger/largeMemory:/Users/zeedh/slowcoders/jdk-rtgc/test/lib \
-        -Dtest.classes=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_math_BigInteger_largeMemory_SymmetricRangeTests_java/classes/0/java/math/BigInteger/largeMemory/SymmetricRangeTests.d \
-        -Dtest.class.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_math_BigInteger_largeMemory_SymmetricRangeTests_java/classes/0/java/math/BigInteger/largeMemory/SymmetricRangeTests.d:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_math_BigInteger_largeMemory_SymmetricRangeTests_java/classes/0/test/lib \
-        -Dtest.class.path.prefix=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_math_BigInteger_largeMemory_SymmetricRangeTests_java/classes/0/java/math/BigInteger/largeMemory/SymmetricRangeTests.d:/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/math/BigInteger/largeMemory:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_math_BigInteger_largeMemory_SymmetricRangeTests_java/classes/0/test/lib \
-        -Xmx768m \
+        -Dtest.nativepath=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/hotspot/jtreg/native \
+        -Dtest.root=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg \
+        -Dtest.name=gc/TestSoftReferencesBehaviorOnOOME.java \
+        -Dtest.file=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/gc/TestSoftReferencesBehaviorOnOOME.java \
+        -Dtest.src=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/gc \
+        -Dtest.src.path=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/gc:/Users/zeedh/slowcoders/jdk-rtgc/test/lib \
+        -Dtest.classes=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_TestSoftReferencesBehaviorOnOOME_java/classes/0/gc/TestSoftReferencesBehaviorOnOOME.d \
+        -Dtest.class.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_TestSoftReferencesBehaviorOnOOME_java/classes/0/gc/TestSoftReferencesBehaviorOnOOME.d:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_TestSoftReferencesBehaviorOnOOME_java/classes/0/test/lib \
+        -Dtest.class.path.prefix=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_TestSoftReferencesBehaviorOnOOME_java/classes/0/gc/TestSoftReferencesBehaviorOnOOME.d:/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/gc:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_TestSoftReferencesBehaviorOnOOME_java/classes/0/test/lib \
+        -Dtest.modules=java.base/jdk.internal.misc \
+        --add-modules java.base \
+        --add-exports java.base/jdk.internal.misc=ALL-UNNAMED \
         -XX:MaxRAMPercentage=6.25 \
-        -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_math_BigInteger_largeMemory_SymmetricRangeTests_java/tmp \
-        -ea \
-        -esa \
-        -Djava.library.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/jdk/jtreg/native \
-        -Xmx8g \
-        -XX:+CompactStrings \
-        com.sun.javatest.regtest.agent.MainWrapper /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_math_BigInteger_largeMemory_SymmetricRangeTests_java/java/math/BigInteger/largeMemory/SymmetricRangeTests.d/main.0.jta
+        -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_TestSoftReferencesBehaviorOnOOME_java/tmp \
+        -Djava.library.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/hotspot/jtreg/native \
+        -Xmx128m \
+        com.sun.javatest.regtest.agent.MainWrapper /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_TestSoftReferencesBehaviorOnOOME_java/gc/TestSoftReferencesBehaviorOnOOME.d/main.0.jta 512 2k
